selfhost/test/typechecker/import/error_duplicate_func_name.1.out
Error at %FILE_NAME%:3:5
Duplicate name 'add'
  |  val add = 123
         ^
This name is also declared at (1:8)
  |  import add from "./_exports"
            ^
