selfhost/test/typechecker/import/error_duplicate_func_name.1.abra
import add from "./_exports"

val add = 123
